syntax = "proto3";

import "manager.proto";
option go_package = "proto/";
package proto;

service NodeService {
    rpc WriteForward(ForwardRequest) returns (Empty) {}
    rpc Invalidate(InvalidateRequest) returns (Empty) {}
    rpc Send(SendRequest) returns (Empty) {}
    rpc InitWrite(InitWriteRequest) returns (Empty) {}

    // ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
    rpc InitRead(InitReadRequest) returns (InitReadResponse) {}
    rpc ReadForward(ReadForwardRequest) returns (Empty) {}
    rpc SendContent(SendContentRequest) returns (Empty) {}
    rpc SwitchCM(SwitchCMRequest) returns (Empty) {}
}



message SendContentRequest {
    string page = 1;
    string content = 2;
}
message ReadForwardRequest {
    string page = 1;
    string node = 2;
}
message InitReadRequest {
    string page = 1;
}
message InitReadResponse {
    string content = 1;
}

// +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
message InitWriteRequest {
    string page = 1;
    string content = 2;
}


message SendRequest {
    string page = 1;
}
message InvalidateRequest {
    string page = 1;
}

message ForwardRequest {
    string page = 1;
    string node = 2;
}

